backend: sync shared source tree from ReARM Pro backend
Scripted mirror of the shared (non-oss, non-saas) backend sources from
the ReARM Pro tree via its copy-src.sh - oss/ trees on both sides and
the CE VersionAssignmentTest are preserved untouched. CE-side manual
reconciliation of oss classes and build/config files follows separately.

ReARM-Agentic-Session: ce-backend-sync-1784324638
ReARM-Agent: 62df357e-a3a4-4df5-82d4-049e629d1c6b
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>